notes/bf-kk8xl6/scope_test_indent_without_key.log
warning: unused import: `IndentTransitionType`
  --> src/parsers/yaml/parser.rs:12:95
   |
12 |     scope::{ScopeStack, Scope, classify_line_type, LineClassification, IndentTransitionState, IndentTransitionType, ScopeInfo, Scope...
   |                                                                                               ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `log::trace as log_trace`
  --> src/parsers/yaml/scope.rs:73:5
   |
73 | use log::trace as log_trace;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> src/parsers/yaml/syntax_validator.rs:67:13
   |
67 |         let mut warnings = Vec::new();
   |             ----^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `delimiter`
   --> src/parsers/yaml/syntax_validator.rs:228:14
    |
228 |         for (delimiter, col) in brace_stack {
    |              ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_delimiter`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `delimiter`
   --> src/parsers/yaml/syntax_validator.rs:235:14
    |
235 |         for (delimiter, col) in bracket_stack {
    |              ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_delimiter`

warning: unused variable: `context`
   --> src/parsers/yaml/syntax_validator.rs:254:9
    |
254 |         context: &ValidationContext,
    |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_context`

warning: unused variable: `line_num`
   --> src/parsers/yaml/syntax_validator.rs:400:48
    |
400 |     fn update_from_line(&mut self, line: &str, line_num: usize) {
    |                                                ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_line_num`

warning: unused variable: `char_pos`
   --> src/parsers/yaml/syntax_detector.rs:529:14
    |
529 |         for (char_pos, ch) in line.chars().enumerate() {
    |              ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_char_pos`

warning: unused variable: `quote_char`
   --> src/parsers/yaml/syntax_detector.rs:783:30
    |
783 |             let (error_type, quote_char) = match self.delimiter_state.quote_state {
    |                              ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_quote_char`

warning: unused variable: `direction`
    --> src/parsers/yaml/scope.rs:1307:21
     |
1307 |                 let direction = if new_indent > old_indent {
     |                     ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_direction`

warning: unused variable: `parallelism`
   --> src/parsers/traits.rs:431:9
    |
431 |         parallelism: usize,
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_parallelism`

warning: method `update_scope_depth` is never used
   --> src/parsers/yaml/parser.rs:337:8
    |
 84 | impl BasicParser {
    | ---------------- method in this implementation
...
337 |     fn update_scope_depth(&mut self) {
    |        ^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `check_duplicate_keys` is never read
  --> src/parsers/yaml/syntax_validator.rs:19:5
   |
15 | pub struct SyntaxValidator {
   |            --------------- field in this struct
...
19 |     check_duplicate_keys: bool,
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `SyntaxValidator` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis

warning: `armor` (lib) generated 13 warnings (run `cargo fix --lib -p armor` to apply 11 suggestions)
   Compiling armor v0.1.0 (/home/coding/ARMOR)
error[E0596]: cannot borrow `parser` as mutable, as it is not declared as mutable
   --> tests/indent_without_key_test.rs:168:18
    |
168 |     let result = parser.validate_str(yaml);
    |                  ^^^^^^ cannot borrow as mutable
    |
help: consider changing this to be mutable
    |
154 |     let mut parser = BasicParser::strict();
    |         +++

For more information about this error, try `rustc --explain E0596`.
error: could not compile `armor` (test "indent_without_key_test") due to 1 previous error
